force-app/main/default/objects/SB_Product__c/fields/Facility_Size__c.field-meta.xml
<CustomField>
    <fullName>Facility_Size__c</fullName>
    <description>The size of the facility that the client needs. Field name changes - Notional Field values. SGPRT-1229</description>
    <inlineHelpText>The size of the facility that the client needs. Each facility required should be its own product. If the SB participation needs to be booked across multiple balance sheets, then the facility size should be split pro-rata into multiple products.</inlineHelpText>
    <label>Facility Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>