force-app/main/default/objects/SB_Product__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>Enter the expected fee amount based on the frequency.</description>
    <inlineHelpText>Enter the expected fee amount based on the frequency.</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>