force-app/main/default/objects/SB_Product__c/fields/Fee_Comm__c.field-meta.xml
<CustomField>
    <fullName>Fee_Comm__c</fullName>
    <inlineHelpText>The fee associated to the number entered in the &quot;Monthly Volume&quot; field i.e. fee for # Transactions # Accounts # Cheques # Devices etc.</inlineHelpText>
    <label>Volume Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>