force-app/main/default/objects/SB_Product__c/fields/Fee_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Fee_Frequency__c</fullName>
    <description>How often will fees be received?</description>
    <inlineHelpText>How often will fees be received?</inlineHelpText>
    <label>Fee Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Once off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>