force-app/main/default/objects/SB_Product__c/fields/Finance_Approved_Fee_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_Fee_Recognition__c</fullName>
    <description>This field indicates the Finance agreed percentage of total fees revenue to be realised upfront (SGPRT-1703)</description>
    <inlineHelpText>Indicates the finance agreed percentage of Total fees revenue to be realised upfront.</inlineHelpText>
    <label>Finance Approved Fee Recognition %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>