force-app/main/default/objects/SB_Product__c/fields/Financial_year_end__c.field-meta.xml
<CustomField>
    <fullName>Financial_year_end__c</fullName>
    <description>SFP-5354 How many days between now and the Financial year end.</description>
    <formula>DATE(YEAR(TODAY()),12,31) -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation to display how many days between today and the end of the year</inlineHelpText>
    <label>Financial year end</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>