force-app/main/default/objects/SB_Product__c/fields/Flat_fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_fee__c</fullName>
    <inlineHelpText>This value is not muliplied by any factor (so it will be included directly in the total deal size) E.g. Enter an amount for negotiated fees, and the commission earned off of LC&apos;s and Guarantees (on an annual basis) for example.</inlineHelpText>
    <label>Annual Flat Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>