force-app/main/default/objects/SB_Product__c/fields/Funding_Required__c.field-meta.xml
<CustomField>
    <fullName>Funding_Required__c</fullName>
    <inlineHelpText>The Initial Funding Required on the Draw Date identified. Please input &quot;0&quot; for back-to-back funded loans</inlineHelpText>
    <label>Funding Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>