force-app/main/default/objects/SB_Product__c/fields/Funding_Required_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Funding_Required_Rollup__c</fullName>
    <description>Case#141 - Rudolf Niehaus Roll-up the funding required values of the related draw down profile records</description>
    <label>Total Funding Required</label>
    <summarizedField>Draw_Down_Profile__c.Funding_Required__c</summarizedField>
    <summaryForeignKey>Draw_Down_Profile__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>