force-app/main/default/objects/SB_Product__c/fields/Global_Rating__c.field-meta.xml
<CustomField>
    <fullName>Global_Rating__c</fullName>
    <label>Global Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>