force-app/main/default/objects/SB_Product__c/fields/Grand_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Product__c</fullName>
    <description>Grand Parent Product</description>
    <label>Grand Parent Product (GPP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Advisory Fees</fullName>
            </value>
            <value>
                <fullName>Agricultural Products</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Bank Sector Services</fullName>
            </value>
            <value>
                <fullName>Base Metals</fullName>
            </value>
            <value>
                <fullName>Bills of exchange discounted</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Bulk and Steel</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Commitments</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Core Custody</fullName>
            </value>
            <value>
                <fullName>Cost Overrun Facility</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit Finance &amp; Leverage</fullName>
            </value>
            <value>
                <fullName>Credit Linked Notes &amp; Depo</fullName>
            </value>
            <value>
                <fullName>Cross Border Finance</fullName>
            </value>
            <value>
                <fullName>Custody Services</fullName>
            </value>
            <value>
                <fullName>Customer foreign currency accounts (CFC)</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Debtor Finance</fullName>
            </value>
            <value>
                <fullName>Debt Structuring</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Drafts issues</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>