force-app/main/default/objects/SB_Product__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <description>SFP-5354 Cover start date.</description>
    <inlineHelpText>The date on which the cover comes into effect.</inlineHelpText>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>