force-app/main/default/objects/SB_Product__c/fields/Insurance_Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Current_Year_Revenue__c</fullName>
    <description>SFP-6290 - This formula field calculates the Total product revenue for the Current Year Fees and Current Year Commission</description>
    <formula>Current_Year_Fees__c + Current_Year_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimates the total sum of Current Year Fees and Current Year Commission</inlineHelpText>
    <label>Current Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>