force-app/main/default/objects/SB_Product__c/fields/Insurance_Total_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Total_Revenue_Amount__c</fullName>
    <description>SFP-6290 - This formula field calculates the Total Product Revenue associated with Total Fees and Total Commission.</description>
    <formula>Total_Fees__c + Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimates the the total sum of Total Fees and Total Commission</inlineHelpText>
    <label>Total Revenue (Amount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>