force-app/main/default/objects/SB_Product__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-5354 Name of insurer SBG are collaborating with.</description>
    <inlineHelpText>Select the name of the insurance company that will underwrite the risk.</inlineHelpText>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Insurer)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>