force-app/main/default/objects/SB_Product__c/fields/Internal_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Internal_Credit_Rating__c</fullName>
    <formula>Opportunity__r.Internal_Credit_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Credit Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>