force-app/main/default/objects/SB_Product__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Date transaction is launched to the market.
SGPRT-3960</description>
    <inlineHelpText>Date transaction is launched to the market</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>