force-app/main/default/objects/SB_Product__c/fields/Legally_Committed__c.field-meta.xml
<CustomField>
    <fullName>Legally_Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Documents have been signed and the Bank has reached a position where it can be sued if it pulls out of the transaction</inlineHelpText>
    <label>Legally Committed?</label>
    <type>Checkbox</type>
</CustomField>