force-app/main/default/objects/SB_Product__c/fields/Lending_Distribution_Potential__c.field-meta.xml
<CustomField>
    <fullName>Lending_Distribution_Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lending Distribution Potential</label>
    <type>Checkbox</type>
</CustomField>