force-app/main/default/objects/SB_Product__c/fields/Liquids__c.field-meta.xml
<CustomField>
    <fullName>Liquids__c</fullName>
    <description>Insert the cost of Liquids (bps) appropriate to the tenor and profile of the loan SGPRT-625</description>
    <inlineHelpText>Insert the cost of Liquids (bps) appropriate to the tenor and profile of the loan.</inlineHelpText>
    <label>Liquids (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>