force-app/main/default/objects/SB_Product__c/fields/Loan_Profile__c.field-meta.xml
<CustomField>
    <fullName>Loan_Profile__c</fullName>
    <label>Loan Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amortising Term Loan</fullName>
            </value>
            <value>
                <fullName>Bullet Term Loan</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>Revolving Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>