force-app/main/default/objects/SB_Product__c/fields/Locked_Fee_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Locked_Fee_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate if Finance Approved Fee Recognition % has been updated by user.</description>
    <inlineHelpText>Indicates if Finance Approved Fee Recognition % has been updated by user.</inlineHelpText>
    <label>Locked Fee Recognition %</label>
    <type>Checkbox</type>
</CustomField>