force-app/main/default/objects/SB_Product__c/fields/Lookback_Period__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Period__c</fullName>
    <description>SFP-8493 - This is a period over which a compounded RFR applicable to any loan is calculated.</description>
    <inlineHelpText>This is a period over which a compounded RFR applicable to any loan is calculated. It operates by reference to a specified Lookback which determines both the first day of the observation period and the last day of the observation period. Standard Banks preferred choice is 5 RFR Business Days”.</inlineHelpText>
    <label>Lookback Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>