force-app/main/default/objects/SB_Product__c/fields/Loss_Given_Default_LGD__c.field-meta.xml
<CustomField>
    <fullName>Loss_Given_Default_LGD__c</fullName>
    <inlineHelpText>Input applicable transaction LGD %</inlineHelpText>
    <label>Loss Given Default (LGD) (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>