force-app/main/default/objects/SB_Product__c/fields/Mandated__c.field-meta.xml
<CustomField>
    <fullName>Mandated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a tick-box to show that the product has been mandated or not</description>
    <inlineHelpText>Has SB entered into a legally binding mandate with the client in relation to this transaction?</inlineHelpText>
    <label>Mandated</label>
    <type>Checkbox</type>
</CustomField>