force-app/main/default/objects/SB_Product__c/fields/Margin_pct__c.field-meta.xml
<CustomField>
    <fullName>Margin_pct__c</fullName>
    <description>Enter Total Margin above applicable funding base rate expressed in bps. It is the sum of 1. Liquids (bps), 2. Reserving (bps) and 3. Clean Credit Margin (bps) SGPRT-625</description>
    <inlineHelpText>Enter Total Margin above applicable funding base rate expressed in bps. It is the sum of 1. Liquids (bps), 2. Reserving (bps) and 3. Clean Credit Margin (bps)</inlineHelpText>
    <label>Total Margin (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>