force-app/main/default/objects/SB_Product__c/fields/Monetised__c.field-meta.xml
<CustomField>
    <fullName>Monetised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case# 1146: 03/2011 - Rudolf Niehaus IRD / GM Specific field</description>
    <label>Monetised</label>
    <type>Checkbox</type>
</CustomField>