force-app/main/default/objects/SB_Product__c/fields/National_Rating__c.field-meta.xml
<CustomField>
    <fullName>National_Rating__c</fullName>
    <label>National Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>