force-app/main/default/objects/SB_Product__c/fields/Non_performing_Loan__c.field-meta.xml
<CustomField>
    <fullName>Non_performing_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-performing Loan</label>
    <type>Checkbox</type>
</CustomField>