force-app/main/default/objects/SB_Product__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <description>Parent Product</description>
    <label>Parent Product (PP)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Grand_Parent_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Payment</fullName>
            </value>
            <value>
                <fullName>Electronic Collections</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Letters of Credit</fullName>
            </value>
            <value>
                <fullName>Guarantees</fullName>
            </value>
            <value>
                <fullName>Invoice Financing</fullName>
            </value>
            <value>
                <fullName>LC Discounting</fullName>
            </value>
            <value>
                <fullName>Open Account Finance</fullName>
            </value>
            <value>
                <fullName>Account Verification Service (AVS)</fullName>
            </value>
            <value>
                <fullName>Agricultural Products</fullName>
            </value>
            <value>
                <fullName>Airway Releases</fullName>
            </value>
            <value>
                <fullName>Asset-Backed Commercial Paper (ABCP)</fullName>
            </value>
            <value>
                <fullName>Asset-Backed Securitisation (ABS)</fullName>
            </value>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Associate Income</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>ATG - Host to Host</fullName>
            </value>
            <value>
                <fullName>ATG - Online</fullName>
            </value>
            <value>
                <fullName>Autosafe</fullName>
            </value>
            <value>
                <fullName>Autosafe - With Cash Upload</fullName>
            </value>
            <value>
                <fullName>Autosafe - Without Value Hosting / Cash Upload</fullName>
            </value>
            <value>
                <fullName>Autosafe - With Value Hosting</fullName>
            </value>
            <value>
                <fullName>Back-to-Back Guarantee</fullName>
            </value>
            <value>
                <fullName>Back-to-Back  LC</fullName>
            </value>
            <value>
                <fullName>Bank Notes</fullName>
            </value>
            <value>
                <fullName>Base Metals Futures</fullName>
            </value>
            <value>
                <fullName>Base Metals Options</fullName>
            </value>
            <value>
                <fullName>Beyond Payments</fullName>
            </value>
            <value>
                <fullName>Bills For Collection</fullName>
            </value>
            <value>
                <fullName>Bills of Exchange Negotiated (Clean BE&apos;s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>