force-app/main/default/objects/SB_Product__c/fields/Participation_Fee_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Participation_Fee_Guidance__c</fullName>
    <description>Participation Fee guidance/set fee offered to investors for debt syndication expressed in % SGPRT-626</description>
    <inlineHelpText>Participation Fee Guidance/Set Fee given by Arranger for debt syndication expressed in %</inlineHelpText>
    <label>Participation Fee Guidance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>