force-app/main/default/objects/SB_Product__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <description>SFP-5354 - The amount the customer will pay periodically or once-off based on the product selected.</description>
    <inlineHelpText>The amount the customer will pay periodically or once-off based on the product selected.</inlineHelpText>
    <label>Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>