force-app/main/default/objects/SB_Product__c/fields/Primary_Risk_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Risk_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit/ Equity Risk Manager</description>
    <inlineHelpText>Credit/ Equity Risk Manager</inlineHelpText>
    <label>Primary Risk Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please enter an active Bank Contact. Client Contacts or bank inactive contacts cannot be captured.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bank Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>