force-app/main/default/objects/SB_Product__c/fields/Pro_rata_for_current_financial_year__c.field-meta.xml
<CustomField>
    <fullName>Pro_rata_for_current_financial_year__c</fullName>
    <description>SFP-5354 Calculation: Financial Year End - Inception date</description>
    <formula>IF( Renewal__c ,
  IF( 
    AND(
      Inception_Date__c &gt;= DATE(YEAR(TODAY()),1,1),
      Inception_Date__c &lt;= DATE(YEAR(TODAY()),12,31)
    ),
    DATE(YEAR(TODAY()),12,31) - Inception_Date__c,
    IF( 
      AND(
        Inception_Date__c &lt; DATE(YEAR(TODAY()),1,1),
        Inception_Date__c &gt;= DATE(YEAR(TODAY()) - 1,1,1),
        Renewal_Date__c &gt;= DATE(YEAR(TODAY()),1,1),
        Renewal_Date__c &lt;= DATE(YEAR(TODAY()),12,31)
      ),
      Renewal_Date__c - DATE(YEAR(TODAY()),1,1),
      0
    )
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation to display Pro-rata for current Financial year in days.</inlineHelpText>
    <label>Pro-rata for current financial year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>