force-app/main/default/objects/SB_Product__c/fields/Probability_of_Default_PD__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Default_PD__c</fullName>
    <label>Probability of Default (PD) (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>