force-app/main/default/objects/SB_Product__c/fields/Probability_of_delivery_on_first_booking__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_delivery_on_first_booking__c</fullName>
    <label>Probability of delivery on first booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>