force-app/main/default/objects/SB_Product__c/fields/Product_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Comments__c</fullName>
    <inlineHelpText>Description of the product  (255 characters or less)</inlineHelpText>
    <label>Product Comments</label>
    <type>TextArea</type>
</CustomField>