force-app/main/default/objects/SB_Product__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <description>EN-0815:Represents the product house/division that the product belongs to</description>
    <inlineHelpText>Represents the product house/division that the product belongs to.</inlineHelpText>
    <label>Product Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Grand_Parent_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business and Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
            <value>
                <fullName>Vehicle and Asset Finance</fullName>
            </value>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>