force-app/main/default/objects/SB_Product__c/fields/Product_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Source__c</fullName>
    <description>SFP-5352 Field to identify where Lead originates from</description>
    <inlineHelpText>The primary source of where this product originated from as a lead.</inlineHelpText>
    <label>Product Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Automated lead</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Business partner</fullName>
            </value>
            <value>
                <fullName>China Banking</fullName>
            </value>
            <value>
                <fullName>CNHW Banking</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
            <value>
                <fullName>Enterprise Direct</fullName>
            </value>
            <value>
                <fullName>Event/Shows</fullName>
            </value>
            <value>
                <fullName>Intercountry referrals</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Walk in</fullName>
            </value>
            <value>
                <fullName>Wholesale Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>