force-app/main/default/objects/SB_Product__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only to be present on Lending and Commitment Record type</description>
    <inlineHelpText>The product person responsible for pricing and/or execution of this product</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>