force-app/main/default/objects/SB_Product__c/fields/Product_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue_Type__c</fullName>
    <description>SFP-10156: Identification if the product will bring in new revenue or is existing revenue</description>
    <inlineHelpText>Identifies if the product will bring in new revenue or additional revenue on an existing product</inlineHelpText>
    <label>Product Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New to TPS</fullName>
            </value>
            <value>
                <fullName>Retention Money</fullName>
                <default>true</default>
                <label>Retention Money</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>