force-app/main/default/objects/SB_Product__c/fields/Product_Sector__c.field-meta.xml
<CustomField>
    <fullName>Product_Sector__c</fullName>
    <description>This field indicates the Client Sector associated to this this product</description>
    <inlineHelpText>This field indicates the Client Sector associated to this this product</inlineHelpText>
    <label>Product Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>