force-app/main/default/objects/SB_Product__c/fields/ProductCurrencyToCompareWithOppt__c.field-meta.xml
<CustomField>
    <fullName>ProductCurrencyToCompareWithOppt__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;USD&quot;,&quot;USD&quot;,
&quot;ZAR&quot;,&quot;ZAR&quot;,
&quot;Another Currency&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductCurrencyToCompareWithOppt</label>
    <type>Text</type>
</CustomField>